Initial commit: Toko Buah & Snack app

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       syncMode: 'local', // local | firebase | cloudflare
       firebaseConfig: '', // JSON string
       firestoreCollections: { products: 'products', orders: 'orders' },
-      cloudflare: { endpoint: '', token: '' },
+      cloudflare: { endpoint: 'http://localhost:8787', token: '' },
       theme: 'dark'
     };
 
